--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,4 +3,7 @@
     font-family: degular-text, sans-serif;
     font-weight: 500;
     font-style: normal;
+    color: white;
+
+    background-color: black;
 }
