--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -17,3 +17,9 @@ header {
     width: 100%;
     height: 100vh;
 }
+header .content-wrap {
+    width: 80%;
+    height: 100%; 
+    
+    margin: 0 auto;
+}
