--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -3,6 +3,7 @@
     font-family: degular-text, sans-serif;
     font-weight: 500;
     font-style: normal;
+    font-size: 15px;
     color: white;
 
     background-color: black;
@@ -10,6 +11,16 @@
 body {
     margin: 0;
     padding: 0;
+}
+
+/* --- Typographic Styling --- */
+h1, h2, h3, h4, h5, h6, p {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+p {
+    font-size: 6.5rem;
 }
 
 /* ----- Header-Styling ----- */
@@ -20,6 +31,6 @@ header {
 header .content-wrap {
     width: 80%;
     height: 100%; 
-    
+
     margin: 0 auto;
 }
