--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -29,6 +29,10 @@ header {
     height: 100vh;
 }
 header .content-wrap {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: repeat(12, 1fr);
+
     width: 80%;
     height: 100%; 
 
