--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -43,3 +43,21 @@ header .content-wrap {
 p {
     font-size: 1rem;
 }
+
+/* --- Object-Styling --- */
+header #documentary {
+    grid-column: 1/6;
+    grid-row: 2/3 ;
+}
+header #time {
+    grid-column: 6/11;
+    grid-row: 2/3;
+}
+header h1 {
+    grid-column: 1/11;
+    grid-row: 6/9;
+}
+header #scroll-down {
+    grid-column: 1/6;
+    grid-row: 11/12;
+}
