--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -28,6 +28,7 @@ p {
     display: inline-block;
     white-space: nowrap;
 }
+
 /* ----- Header-Styling ----- */
 header {
     width: 100%;
@@ -54,13 +55,15 @@ header #documentary {
     grid-column: 1/6;
     grid-row: 2/3 ;
 }
-header #time {
+header #date {
     grid-column: 6/11;
     grid-row: 2/3;
+
+    text-align: right;
 }
 header .fit {
     grid-column: 1/11;
-    grid-row: 6/9;
+    grid-row: 5/7;
 }
 header #scroll-down {
     grid-column: 1/6;
