--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -33,6 +33,10 @@ p {
 header {
     width: 100%;
     height: 100vh;
+
+    /* --- Adds Background-Image --- */
+    background-image: url(../assets/header-bg.jpg);
+    background-size: cover;
 }
 header .content-wrap {
     display: grid;
