--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -67,7 +67,13 @@ header #date {
 }
 header .fit {
     grid-column: 1/11;
-    grid-row: 5/7;
+    grid-row: 4/8;
+
+    background-image: url(../assets/header-text-bg.jpg);
+    background-clip: text;
+    -webkit-background-clip: text;
+    background-size: cover;
+    color: transparent;
 }
 header #scroll-down {
     grid-column: 1/6;
