--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -50,7 +50,7 @@ header .content-wrap {
 }
 
 /* --- Typographic Styling --- */
-p {
+header p {
     font-size: 1rem;
 }
 
@@ -97,6 +97,48 @@ header #main-headline {
 header #scroll-down {
     grid-column: 1/6;
     grid-row: 11/12;
+}
+
+/* ----- Responsive - Header-Styling ----- */
+
+/* --- Responsive 01 (Width: 767px) --- */
+@media only screen and (max-width: 767px) {
+
+    /* --- Typographic Styling --- */
+    header p {
+        font-size: .75rem;
+    }
+
+    /* --- Object-Styling --- */
+    header .headline-fit {
+        grid-row: 3/11;
+    }
+    header #main-headline {
+        font-size: 30vw;
+        line-height: 30vw;
+    }
+}
+
+/* --- Responsive 02 (Width: 767px) & (Height: 750px) --- */
+@media only screen and (max-width: 767px) and (max-height: 750px) {
+
+    /* --- Object-Styling --- */
+    header .headline-fit {
+        grid-row: 3/10;
+    }
+    header #main-headline {
+        font-size: 25vw;
+        line-height: 25vw;
+    }
+}
+
+/* --- Responsive 03 (Width: 767px) & (Height: 535px) --- */
+@media only screen and (max-width: 767px) and (max-height: 535px) {
+
+    header #main-headline {
+        font-size: 14vw;
+        line-height: 14vw;
+    }
 }
 
 /* ----- Content-Styling ----- */
