Attach div to the current mouse position

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -184,6 +184,10 @@ main .show {
     background-color: blue;
     width: 400px;
     height: 300px;
+
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 
