--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -162,32 +162,26 @@ main p {
     margin: 3.25rem 0;
 }
 main span {
+    display: inline-block;
     color: rgba(255, 255, 255, 0.1);
 }
 
-/* --- Image-Styling --- */
-main .tag-image {
-    display: none;
-}
-main .show {
-    display: block;
-    position: absolute;
-    top: 20%;
-    left: 20%;
-
-    width: 65vw;
-    height: auto;
-}
-
 /* --- Mouse-Over-Div --- */
-#mouseover {
-    background-color: blue;
+.mouseover {
+    visibility: hidden;
+    opacity: 0;
     width: 900px;
     height: 603px;
 
     position: absolute;
     top: 0;
     left: 0;
+
+    transition: opacity 0.7s;
+}
+.show {
+    visibility: visible;
+    opacity: 1;
 }
 
 
