--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -178,10 +178,13 @@ main span {
     width: 900px;
     height: 603px;
 
+    background-size: cover;
+
     z-index: 1;
     position: absolute;
     top: 0;
     left: 0;
+
     transform: translate(-10%, -10%);
     transition: opacity 1s;
 }
