--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -22,8 +22,8 @@ h1, h2, h3, h4, h5, h6, p {
     padding: 0;
 }
 p {
-    font-size: 6.5rem;
-    line-height: 1.5rem;
+    font-size: 6.5vw;
+    line-height: normal;
 }
 
 /* ----- Header-Styling ----- */
@@ -163,8 +163,6 @@ main #gradient {
 main p {
     margin: 3.25rem 0;
     transition: color 1s;
-
-    line-height: 7.5rem;
 }
 main span {
     display: inline-block;
