--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -211,3 +211,12 @@ main span {
 
     transition: all .5s;
 }
+
+/* --- Responsive 01 (Width: 767px) --- */
+@media only screen and (max-width: 767px) {
+    
+    /* --- Text-Styling --- */
+    main p {
+        font-size: 10vw;
+    }
+}
