--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -225,4 +225,21 @@ main span {
         height: 80vw;
         background-position: center;
     }
+
+    .zoom-in {
+        opacity: 1 !important;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-color: black;
+        overflow: -moz-hidden-unscrollable;
+
+        z-index: 1000;
+        width: 100vw;
+        height: 100%;
+
+        position: fixed;
+        left: 0 !important;
+        top: 50% !important;
+        transform: translateY(-50%) !important;
+    }
 }
