Sets visibility to hidden for preloading images

--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -155,7 +155,7 @@ main .content-wrap {
 
 /* --- Preloading-images --- */ 
 .preload-images {
-    display: none; 
+    visibility: hidden; 
     width: 0;
     height: 0;
     background: url(../assets/angestellte.jpg),
